--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     <div class="hero-body">
       <div class="columns is-centered">
         <div class="column">
-          <video id="assembly" autoplay muted loop playsinline width="100%">
+          <video id="assembly" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/assembly1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="column">
-          <video id="deployment" autoplay muted loop playsinline width="100%">
+          <video id="deployment" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/deployment.mp4"
                     type="video/mp4">
           </video>
