add 3d model, update info

--- a/index.html
+++ b/index.html
@@ -55,25 +55,22 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">RAPID: Reconfigurable, Adaptive Platform for Iterative Design</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Anonymous Authors</span>
+            <span class="author-block">Zi Yin<sup>*</sup>,</span>
+            <span class="author-block">Fanhong Li<sup>*</sup>,</span>
+            <span class="author-block">Shurui Zheng,</span>
+            <span class="author-block">Jia Liu<sup>&dagger;</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Paper Under Review</span>
+            <span class="author-block">Tsinghua University</span>
+          </div>
+          <div class="is-size-6 publication-authors">
+            <span class="author-block"><sup>*</sup>Equal Contribution</span>
+            <span class="author-block"><sup>&dagger;</sup>Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="#"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
               <span class="link-block">
                 <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
@@ -85,7 +82,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://github.com/aod321/rapid"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -131,7 +128,7 @@
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-full-width">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
@@ -150,6 +147,33 @@
       </div>
     </div>
     <!--/ Abstract. -->
+  </div>
+</section>
+
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Interactive 3D Preview</h2>
+        <div class="content has-text-justified">
+          <p>
+            Explore the <span class="dnerf">RAPID</span> hardware design in 3D. Use your mouse to rotate, zoom, and pan the model.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <iframe
+            src="https://gmail4424343.autodesk360.com/shares/public/SH90d2dQT28d5b602811b71c5f4267d7dadc?mode=embed"
+            width="100%"
+            height="600"
+            allowfullscreen="true"
+            webkitallowfullscreen="true"
+            mozallowfullscreen="true"
+            frameborder="0">
+          </iframe>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -276,9 +300,9 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{anonymous2025rapid,
+    <pre><code>@article{yin2025rapid,
   title     = {RAPID: Reconfigurable, Adaptive Platform for Iterative Design},
-  author    = {Anonymous},
+  author    = {Yin, Zi and Li, Fanhong and Zheng, Shurui and Liu, Jia},
   journal   = {Under Review},
   year      = {2025},
 }</code></pre>
@@ -292,7 +316,7 @@
       <a class="icon-link" href="#">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="#" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/aod321/rapid" class="external-link">
         <i class="fab fa-github"></i>
       </a>
     </div>
