--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{yin2025rapid,
+    <pre><code>@article{yin2026rapid,
   title     = {RAPID: Reconfigurable, Adaptive Platform for Iterative Design},
   author    = {Yin, Zi and Li, Fanhong and Zheng, Shurui and Liu, Jia},
-  journal   = {Under Review},
-  year      = {2025},
+  journal   = {arXiv preprint arXiv:2602.06653},
+  year      = {2026},
 }</code></pre>
   </div>
 </section>
