--- a/index.html
+++ b/index.html
@@ -171,6 +171,28 @@
 
 <section class="section">
   <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Assembly Guide</h2>
+        <div class="content has-text-justified">
+          <p>
+            <span class="dnerf">RAPID</span>'s modular design enables tool-free assembly in seconds. See the detailed step-by-step instructions
+            <a href="https://github.com/aod321/rapid/blob/main/hardware/instruction.md">here</a>.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <img src="./static/images/assmble.gif"
+               alt="Assembly guide animation"
+               style="max-width: 100%;"/>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="section">
+  <div class="container is-max-desktop">
 
     <div class="columns is-centered">
 
